--- a/src/scss/partials/_site_base.scss
+++ b/src/scss/partials/_site_base.scss
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
-:root
-{
-  --main-color: #65486A;
-  --light-color: #ededed;
-  --dark-color: #323232;
-}
+$feature-color: #65486A;
+$light-shade: #ededed;
+$dark-shade: #323232;
+
+$drop-shadow: 4px 4px 6px rgba(0, 0, 0, 0.4);
+$transparent-linear-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 5%, rgba(255,255,255,0) 95%);
+
+$golden-ratio: 1.618rem;
 
 html
 {
@@ -22,17 +24,17 @@ body
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   margin: 0;
-  background-color: var(--light-color);
+  background-color: $light-shade;
 }
 
 h1, h2, h3, h4, h5, h6
 {
   font-weight: 300;
-  font-size: 1.618rem; /* Golden Ratio */
+  font-size: $golden-ratio;
   margin: 0 0 1rem 0;
 }
 
 h1
 {
-  font-size: 2.618rem; /* Double Golden Ratio */
+  font-size: $golden-ratio * 2;
 }
