--- a/src/scss/partials/_site_footer.scss
+++ b/src/scss/partials/_site_footer.scss
@@ -4,16 +4,18 @@
   justify-content: center;
   align-items: center;
 
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 5%, rgba(255,255,255,0) 95%), var(--main-color);
-  color: var(--light-color);
+  min-height: $golden-ratio * 2;
 
-  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.4);
+  background: $transparent-linear-gradient, $feature-color;
+  color: $light-shade;
+
+  text-shadow: $drop-shadow;
 }
 
 #footer svg
 {
   width: 2rem;
   height: 2rem;
-  fill: var(--light-color);
-  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.4));
+  fill: $light-shade;
+  filter: drop-shadow($drop-shadow);
 }
