Added boilerplate content
- Addeded some boilerplate content to aid in making design choices.
- Design tweaks were made.

--- a/src/pug/partials/_index_main.pug
+++ b/src/pug/partials/_index_main.pug
@@ -1,18 +1,57 @@
 section#about
   header
     h2 about
-  div
+  div.content
     | Hi, I'm Claire. I Code. Blah blah blah.
+    p
+      strong Pellentesque habitant morbi tristique
+      |  senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. 
+      em Aenean ultricies mi vitae est.
+      |  Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
+      code commodo vitae
+      | , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. 
+      a(href="#") Donec non enim
+      |  in turpis pulvinar facilisis. Ut felis.
+    h3 Header Level 3
+    ol
+      li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+      li Aliquam tincidunt mauris eu risus.
+    blockquote
+      p
+        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
+    h4 Header Level 4
+    ul
+      li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+      li Aliquam tincidunt mauris eu risus.
+    pre.
+      \n#header h1 a {
+        display: block;
+        width: 300px;
+        height: 80px;
+      }
+    h5 Header level 5 &amp; 6
+    p
+      | Felis eget, rutrum ad. Platea senectus viverra diam! Sagittis litora sodales rhoncus eros fusce tincidunt morbi ultricies id. Praesent ante aliquet sociis blandit dui per. Elit velit leo ullamcorper interdum. Sodales laoreet primis elementum pharetra vel; augue sem posuere consectetur enim vel! Egestas scelerisque mi potenti lectus curae;. Parturient consectetur, potenti vivamus! Eleifend magna lectus, accumsan nibh eu maecenas nullam suscipit pretium quis.
+    p
+      | Taciti cursus netus suscipit venenatis primis sem id pharetra magna fames risus. Commodo in cras potenti ultrices tincidunt nostra. Et magnis, lectus dui ut et ut porttitor porttitor mi eleifend. Dolor nec parturient condimentum mollis tristique orci tortor ligula elit odio tristique pharetra. Justo eros, sollicitudin eget ut! Fringilla consequat congue orci aliquam condimentum! Habitasse semper praesent vitae praesent luctus. Ultrices, vulputate mollis felis ad sagittis natoque egestas ipsum? Justo curabitur nibh ultricies phasellus vulputate ante? Lectus himenaeos habitasse sed molestie praesent egestas porta curabitur curae; netus habitant. Malesuada facilisis nostra viverra purus bibendum nulla primis pulvinar ornare porta elit. Auctor augue mus natoque tempor. Vivamus nisi porttitor.
+    p
+      | Risus magna ultrices vel, dignissim primis ligula. Vel lacus mus mollis pellentesque nibh rutrum sodales cum enim porttitor nam sollicitudin. Purus tincidunt, integer fermentum nunc. Duis est est ut elementum cubilia vulputate. Nisl, bibendum quis aptent leo magna tempor. Odio consequat ornare magnis vitae netus ac volutpat taciti ante. Sociosqu luctus, convallis aliquet malesuada. Faucibus eros pellentesque habitasse pretium dapibus vel, phasellus dapibus! Magnis vitae suscipit natoque amet lorem? Montes magnis vitae.
+    p
+      | Morbi vestibulum tincidunt duis himenaeos. Etiam dapibus etiam maecenas mauris ullamcorper rhoncus mus pharetra. Litora malesuada vel fusce vulputate pulvinar himenaeos lacus nisl nisl class maecenas. Quisque convallis torquent molestie auctor nibh ad cubilia nec quisque amet lacus. Pellentesque inceptos praesent malesuada lacinia placerat congue praesent. Parturient per porttitor sem cursus. Tempor, sociosqu neque suspendisse viverra odio sociis tristique bibendum aenean.
+    p
+      | Pretium sociosqu natoque eu, egestas orci semper litora magnis. Habitasse rutrum orci vestibulum! Consequat faucibus laoreet semper accumsan commodo venenatis magna! Vitae est interdum diam nibh metus placerat lacus parturient mus mollis class. Platea iaculis, cras ridiculus aliquam in lectus at accumsan. Congue aptent egestas torquent facilisis massa tristique himenaeos porta accumsan! Morbi ridiculus odio integer commodo sagittis penatibus, molestie malesuada purus enim a. Vulputate habitasse quisque auctor mus. Turpis leo et amet pellentesque euismod condimentum sociosqu purus tellus libero nostra. Mus urna scelerisque tortor? Sagittis sed imperdiet accumsan. Iaculis lobortis aliquet vivamus primis. Arcu congue eros nullam integer nisl congue suspendisse adipiscing phasellus et orci. Torquent sit dis sodales taciti congue.
+    
+
 section#projects
   header
     h2 projects
-  div
+  div.content
     | Hi, I'm Claire. I Code. Blah blah blah.
 section#contact
   header
     h2 contact
-  div
-    .container
+  div.content
+    div.container
       form(action="action_page.php")
         label(for="name") Name
         input#name(type="text" name="name" placeholder="Your name")
