--- a/src/scss/partials/_site_base.scss
+++ b/src/scss/partials/_site_base.scss
@@ -23,6 +23,7 @@ body
 {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  line-height: $golden-ratio;
   margin: 0;
   background-color: $light-shade;
 }
@@ -31,10 +32,25 @@ h1, h2, h3, h4, h5, h6
 {
   font-weight: 300;
   font-size: $golden-ratio;
-  margin: 0 0 1rem 0;
+  margin: $golden-ratio 0;
 }
 
 h1
 {
+  font-size: $golden-ratio * 3;
+}
+
+h2
+{
   font-size: $golden-ratio * 2;
+}
+
+h3
+{
+  font-size: $golden-ratio * 1.4;
+}
+
+h4
+{
+  font-size: $golden-ratio * 1.2;
 }
