--- a/src/scss/partials/_site_nav.scss
+++ b/src/scss/partials/_site_nav.scss
@@ -1,37 +1,36 @@
 #nav
 {
-  display: flex;
-  align-items: center;
-  min-height: $golden-ratio * 2;
-  background: $feature-color;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
+    display: flex;
+    align-items: center;
+    padding: 0 $golden-ratio * 0.5;
+    min-height: $golden-ratio * 2;
+    background: $feature-color;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 
-#nav svg
-{
-  width: 2rem;
-  height: auto;
-  fill: $light-shade;
-  filter: drop-shadow($drop-shadow);
-}
- 
-#nav a
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $light-shade;
-  
-  text-decoration: none;
-  min-width: 5rem;
-  text-shadow: $drop-shadow;
+    svg
+    {
+        width: 2rem;
+        height: auto;
+        fill: $light-shade;
+        filter: drop-shadow($drop-shadow);
+    }
 
-  
-}
+    a
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $light-shade;
 
-#nav a:hover
-{
-  text-decoration: underline;
+        text-decoration: none;
+        min-width: 5rem;
+        text-shadow: $drop-shadow;
+
+        :hover
+        {
+        text-decoration: underline;
+        }
+    }
 }
