Added avatar, intro section, colours
-Added an SVG avatar.
-Added an introduction section to index featuring the avatar and speech bubbles.
- Expanded the colour palette.
- Added clip-path to bottom of header.

--- a/src/pug/partials/_index_main.pug
+++ b/src/pug/partials/_index_main.pug
@@ -1,6 +1,14 @@
-section#about
+section#intro
+  div.avatar
+    img(src='img/claire.svg')
+  div.content
+    section
+      p Hi there!
+      p I'm Claire, and this is my website. There are many like it, but this one is mine.
+
+section#projects
   header
-    h2 about
+    h2 projects
   div.content
     | Hi, I'm Claire. I Code. Blah blah blah.
     p
@@ -41,12 +49,6 @@ section#about
     p
       | Pretium sociosqu natoque eu, egestas orci semper litora magnis. Habitasse rutrum orci vestibulum! Consequat faucibus laoreet semper accumsan commodo venenatis magna! Vitae est interdum diam nibh metus placerat lacus parturient mus mollis class. Platea iaculis, cras ridiculus aliquam in lectus at accumsan. Congue aptent egestas torquent facilisis massa tristique himenaeos porta accumsan! Morbi ridiculus odio integer commodo sagittis penatibus, molestie malesuada purus enim a. Vulputate habitasse quisque auctor mus. Turpis leo et amet pellentesque euismod condimentum sociosqu purus tellus libero nostra. Mus urna scelerisque tortor? Sagittis sed imperdiet accumsan. Iaculis lobortis aliquet vivamus primis. Arcu congue eros nullam integer nisl congue suspendisse adipiscing phasellus et orci. Torquent sit dis sodales taciti congue.
     
-
-section#projects
-  header
-    h2 projects
-  div.content
-    | Hi, I'm Claire. I Code. Blah blah blah.
 section#contact
   header
     h2 contact
