--- a/src/scss/partials/_site_nav.scss
+++ b/src/scss/partials/_site_nav.scss
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 0 $golden-ratio * 0.5;
     min-height: $golden-ratio * 2;
-    background: $feature-color;
+    background: $primary-color;
     position: sticky;
     top: 0;
     z-index: 100;
