--- a/src/scss/partials/_index_main.scss
+++ b/src/scss/partials/_index_main.scss
@@ -4,7 +4,6 @@
   {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: $golden-ratio;
     background: $transparent-linear-gradient, $light-shade;
   
@@ -12,13 +11,67 @@
     {
       max-width: 60rem;
     }
+  }
+}
 
+#intro
+{
+  flex-direction: row !important;
+  justify-content: center;
+  align-items: flex-start !important;
+
+  div.avatar
+  {
+    margin-top: -10rem;
+    img
+    {
+      width: 20rem;
+      height: auto;
+      filter: drop-shadow($drop-shadow);
+    }
+
+  }
+
+  div.content
+  {
+    display: flex;
+    margin-top: -8rem;
+    flex-direction: column !important;
+    justify-content: flex-start;
+    
+
+    section
+    {
+      position: relative;
+      color: $light-shade;
+      background: $transparent-linear-gradient, $dark-shade;
+      box-shadow: $drop-shadow;
+      border-radius: .4em;
+      padding: 0 $golden-ratio * 0.5;
+      margin: $golden-ratio;
+  
+      :after
+      {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 70%;
+        width: 0;
+        height: 0;
+        border: 1.281em solid transparent;
+        border-right-color: $dark-shade;
+        border-left: 0;
+        border-bottom: 0;
+        margin-top: -0.641em;
+        margin-left: -1.281em;
+      }
+    }
   }
 }
 
 #projects
 {
-  background: $transparent-linear-gradient, $feature-color !important; 
+  background: $transparent-linear-gradient, $primary-color !important; 
   color: $light-shade;
 
   text-shadow: $drop-shadow;
@@ -44,7 +97,7 @@
 
 #contact input[type=submit]
 {
-  background-color: $feature-color;
+  background-color: $primary-color;
   color: $light-shade;
   padding: 0.8rem 1.2rem;
   border: none;
@@ -54,5 +107,5 @@
 
 #contact input[type=submit]:hover
 {
-  background: $transparent-linear-gradient, $feature-color !important; 
+  background: $transparent-linear-gradient, $primary-color !important; 
 }
