--- a/src/scss/partials/_site_footer.scss
+++ b/src/scss/partials/_site_footer.scss
@@ -6,7 +6,7 @@
 
   min-height: $golden-ratio * 2;
 
-  background: $transparent-linear-gradient, $feature-color;
+  background: $transparent-linear-gradient, $primary-color;
   color: $light-shade;
 
   text-shadow: $drop-shadow;
